kube/deployment.yaml
apiVersion: apps/v1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: kino
  namespace: default
  labels:
    app: kino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kino
  template:
    metadata:
      labels:
        app: kino
    spec:
      containers:
        - name: kino
          image: unrufflednightingale/kino:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
