kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kino
  namespace: default
  labels:
    app: kino
spec:
  selector:
    app: kino
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
